LinkedList was horrifically slow in Polygon2D for polygons of >100000 vertices. Added a general KMLViewer...